--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@ layout: home
                 cantidad de sus servicios como pueden ser Lambda, DynamoDB, 
                 CloudFormation, S3, CodeCommit, VPC, ...
               </p>
+              <p
+                class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
+                ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+              </p>
               <a
                 href="https://www.linkedin.com/in/javier-p%C3%A9rez-hidalgo/"
                 class="font-bold text-gray-500 px-8 py-4 rounded-md bg-gray-50 hover:bg-gray-400 hover:text-gray-50">
