--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ layout: home
                 class="font-bold text-gray-500 px-8 py-4 rounded-md bg-gray-50 hover:bg-gray-400 hover:text-gray-50">
                   ¡ Visita mi LinkedIn !
               </a>
+              <p
+                class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
+                ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+              </p>
             </div>
             <div class="w-full md:w-4/12 px-4 mr-auto ml-auto">
               <div
@@ -198,6 +202,10 @@ layout: home
                 src="./assets/img/aprendizaje.jpg"
               />
             </div>
+            <p
+              class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
+              ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+            </p>
             <div class="w-full md:w-5/12 ml-auto mr-auto px-4">
               <div class="md:pr-12">
                 <div
