--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@ layout: home
         <div class="container relative mx-auto">
           <div class="items-center flex flex-wrap">
             <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
-              <div class="pr-12">
+              <div class="pr-0">
                 <h1 class="text-white font-semibold text-5xl">
                   Javier Pérez Hidalgo
                 </h1>
                 <p class="mt-4 text-lg text-gray-300">
-                  
+                  <!--   SE PUEDE ESCRIBIR  -->
                 </p>
               </div>
             </div>
