--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: home
             <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
               <div class="pr-0">
                 <h1 class="text-white font-semibold text-5xl">
-                  Javier Pérez Hidalgo
+                  .jph
                 </h1>
                 <p class="mt-4 text-lg text-gray-300">
                   <!--   SE PUEDE ESCRIBIR  -->
