--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@ layout: home
                     DevOps Mentality
                   </h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Aún siendo administrador de sistemas, mi mentalidad 
-                    está muy ligada a la cultura DevOps, centrada siempre 
-                    en el equilibrio entre el desarrollo y la estabilidad.
+                    Mi mentalidad está muy ligada a la cultura DevOps, buscando 
+                    el equilibrio entre el desarrollo y la estabilidad.
                   </p>
                 </div>
               </div>
@@ -101,7 +100,7 @@ layout: home
                   </h6>
                   <p class="mt-2 mb-4 text-gray-600">
                     Me encantan las nuevas tecnologías y siempre intento 
-                    estar formándome en ellas y creciendo intelectualmente.
+                    estar formándome en ellas y creciendo profesionalmente.
                   </p>
                 </div>
               </div>
@@ -114,17 +113,17 @@ layout: home
                 <i class="fas fa-briefcase text-xl"></i>
               </div>
               <h3 class="text-3xl mb-2 font-semibold leading-normal">
-                AWS SysAdmin en EUIGS
+                AWS SysAdmin en Admiral Europe Tech
               </h3>
               <p
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
-		            Desde marzo de 2021 me encuentro trabajando en EUIGS, como SysAdmin.
+		            Desde marzo de 2021 me encuentro trabajando en Admiral Europe Tech, como SysAdmin.
               </p>
               <p
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
                 En mi día a día, manejo AWS principalmente, donde utilizo gran 
-                cantidad de sus servicios como pueden ser Lambda, DynamoDB, 
-                CloudFormation, S3, CodeCommit, VPC, ...
+                cantidad de sus servicios como pueden ser CloudFormation, EKS, Lambda, 
+                DynamoDB, CloudFormation, S3, CodeCommit, VPC, ...
               </p>
               <p
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
@@ -161,12 +160,12 @@ layout: home
                     </polygon>
                   </svg>
                   <h4 class="text-xl font-bold text-black">
-                    EUIGS | Admiral Group
+                    Admiral Europe Tech | Admiral Group
                   </h4>
                   <p class="text-md font-light mt-2 text-black">                    
-                    EUIGS pertenece al grupo Admiral. Este grupo 
-                    es una multinacional que contiene una serie 
-                    de empresas relacionadas principalmente con 
+                    Admiral Europe Tech pertenece al grupo Admiral. 
+                    Este grupo es una multinacional que contiene una 
+                    serie de empresas relacionadas principalmente con 
                     el mundo de los seguros.
                   </p>
                 </blockquote>
@@ -217,8 +216,8 @@ layout: home
                 </h3>
                 <p class="mt-4 text-lg leading-relaxed text-grey-600">
                   Además de mis estudios, poseo una serie de cursos realizados
-                  con el objetivo de seguir creciendo en el ámbito profesional y 
-                  de aprender nuevas tecnologías. Algunos de ellos son:
+                  con el objetivo de seguir creciendo y de aprender nuevas tecnologías. 
+                  Algunos de ellos son:
                 </p>
                 <ul class="list-none mt-6">
                   <li class="py-2">
@@ -231,8 +230,8 @@ layout: home
                       </div>
                       <div>
                         <h4 class="text-gray-600">
-                          <a href="https://linuxacademy.com/profile/u/cert/id/427293">
-                            AWS Lambda Deep Dive
+                          <a href="https://verify.acloud.guru/1BA735FD2D4A">
+                            Mastering AWS CloudFormation
                           </a>
                         </h4>
                       </div>
@@ -248,8 +247,8 @@ layout: home
                       </div>
                       <div>
                         <h4 class="text-gray-600">
-                          <a href="https://linuxacademy.com/profile/u/cert/id/427234">
-                            AWS CloudFormation Deep Dive
+                          <a href="https://verify.acloud.guru/A5117767BF05">
+                            Certified Associate in Python Programming Certification
                           </a>
                         </h4>
                       </div>
