--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ layout: home
               </h3>
               <p
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
-		            Desde marzo de 2021 me encuentro trabajando en Admiral Europe Tech, como SysAdmin.
+		            Desde marzo de 2021 me encuentro trabajando como SysAdmin en Admiral Europe Tech.
               </p>
               <p
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
