--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ layout: home
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
                 En mi día a día, manejo AWS principalmente, donde utilizo gran 
                 cantidad de sus servicios como pueden ser CloudFormation, EKS, Lambda, 
-                DynamoDB, CloudFormation, S3, CodeCommit, VPC, ...
+                DynamoDB, Cost Explorer, S3, CodeCommit, VPC, ...
               </p>
               <p
                 class="text-lg font-light leading-relaxed mt-4 mb-4 text-gray-700">
